Refactor(Product) : 상품 이미지 유효성 수정
- URL java20부터 지원중단됨. URI 로 변경.